prettify syntax highlighting

--- a/gui.html
+++ b/gui.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="Assets/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="Assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="Assets/js/codemirror.js"></script>
-    <script type="text/javascript" src="Assets/js/z80.js"></script>
+    <script type="text/javascript" src="Assets/js/armv4t.js"></script>
     <script type="text/javascript" src="Assets/js/gui.js"></script>
     <script type="text/javascript" src="Assets/js/devboard.js"></script>
     <link rel="stylesheet" href="Assets/css/codemirror.css" />
