--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="Assets/js/armv4t.js"></script>
     <script type="text/javascript" src="Assets/js/gui.js"></script>
     <script type="text/javascript" src="Assets/js/devboard.js"></script>
+    <script type="text/javascript" src="Assets/js/exampleELF.js"></script>
     <link rel="stylesheet" href="Assets/css/codemirror.css" />
     <link rel="stylesheet" href="Assets/css/codemirror.css" />
     <link rel="stylesheet" href="Assets/css/hopscotch.css" />
@@ -30,7 +31,14 @@
     <div id="editor"></div>
     <div id="buttons">
       <button id="assemble" class="btn btn-success">Assemble Input</button>
-      <button id="image" class="btn btn-info">Load ELF Image</button>
+      <div class="btn-group" data-container="body" data-trigger="hover" data-toggle="popover" data-placement="top" data-html="true" data-content="To compile programs targeting the dev board, you can use <a href=''>this</a> startup file and <a href=''>this</a> ld linker script." title="Compiling ELF Files">
+        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Load ELF Image <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a href="#" id="image">Select Local File</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#" id="example-elf">Example.ELF</a></li>
+        </ul>
+      </div>
       <button id="run" class="btn btn-danger" disabled="disabled" data-toggle="modal" data-target="#runProgramModal">Run Program</button>
     </div>
     <div id="console"></div>
@@ -47,7 +55,7 @@ hello:
 .equ    RAM_BASE,   0x00040000
 .equ    TOPSTACK,   RAM_BASE + RAM_SIZE
 @ system call for breaking out of the simulator
-.equ    SYS_HALT, 0x01
+.equ    SYS_HALT,   0x01
 ldr  r0,  =TOPSTACK
 mov  r13, r0  @ R13 acts as stack pointer by convention
 
